# qa_guru_python_2_16

./: .gitignore
with_pipenv/: Pipfile
with_poetry2/: pyproject.toml
