[tool.poetry]
name = "with-poetry2"
version = "0.1.0"
description = ""
authors = ["skhomuti <skhomuti@gmail.com>"]
readme = "README.md"
packages = [{include = "with_poetry2"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.2"
selene = "2.0.0b14"

[tool.pytest.ini_options]
addopts = "--alluredir allure-results --clean-alluredir "


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
